--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <tbody id="results"></tbody>
     </table>
     <p style="margin-top:15px; font-size:0.9rem; text-align:center;">
-      🔁 Rates sourced in real-time from <a href="https://exchangerate.host" target="_blank">ExchangeRate.host</a>
+      🔁 Rates sourced from <a href="https://frankfurter.app" target="_blank">Frankfurter.app</a>
     </p>
   </div>
 
@@ -78,35 +78,39 @@
       const base = document.getElementById('base').value;
       const target = document.getElementById('target').value;
 
-      const res = await fetch(`https://api.exchangerate.host/latest?base=${base}&symbols=${target}`);
-      const data = await res.json();
-      const rate = data.rates?.[target];
+      try {
+        const res = await fetch(`https://api.frankfurter.app/latest?from=${base}&to=${target}`);
+        const data = await res.json();
+        const rate = data.rates?.[target];
 
-      if (!rate) {
-        alert("Could not retrieve exchange rate. Please try again later.");
-        return;
+        if (!rate) {
+          alert("Could not retrieve exchange rate. Please try again later.");
+          return;
+        }
+
+        const platforms = [
+          { name: "Wise", fee: 8, margin: 5, speed: "1–2 days" },
+          { name: "Payoneer", fee: 20, margin: 10, speed: "1–3 days" },
+          { name: "PayPal", fee: 35, margin: 20, speed: "1–2 days" },
+          { name: "XE", fee: 10, margin: 7, speed: "1–2 days" }
+        ];
+
+        const results = platforms.map(p => {
+          const fxRate = rate * (1 - p.margin / 100);
+          const final = (amount - p.fee) * fxRate;
+          return `<tr>
+            <td>${p.name}</td>
+            <td>${fxRate.toFixed(2)}</td>
+            <td>${p.fee} ${base}</td>
+            <td>${final.toLocaleString()} ${target}</td>
+            <td>${p.speed}</td>
+          </tr>`;
+        }).join("");
+
+        document.getElementById('results').innerHTML = results;
+      } catch (err) {
+        alert("Error fetching exchange rate. Please try again.");
       }
-
-      const platforms = [
-        { name: "Wise", fee: 8, margin: 5, speed: "1–2 days" },
-        { name: "Payoneer", fee: 20, margin: 10, speed: "1–3 days" },
-        { name: "PayPal", fee: 35, margin: 20, speed: "1–2 days" },
-        { name: "XE", fee: 10, margin: 7, speed: "1–2 days" }
-      ];
-
-      const results = platforms.map(p => {
-        const fxRate = rate * (1 - p.margin / 100);
-        const final = (amount - p.fee) * fxRate;
-        return `<tr>
-          <td>${p.name}</td>
-          <td>${fxRate.toFixed(2)}</td>
-          <td>${p.fee} ${base}</td>
-          <td>${final.toLocaleString()} ${target}</td>
-          <td>${p.speed}</td>
-        </tr>`;
-      }).join("");
-
-      document.getElementById('results').innerHTML = results;
     }
   </script>
 </body>
