--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>FreelanceFX API Test</title>
+  <title>FreelanceFX Proxy Test</title>
 </head>
 <body>
-  <h2>Test FX Proxy</h2>
-  <button onclick="testRate()">Test USD → NGN</button>
+  <h2>Test FX Rate</h2>
+  <button onclick="testRate()">Fetch USD → NGN</button>
   <pre id="result"></pre>
   <script>
     async function testRate() {
