--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>FreelanceFX Calculator (Secure & Flexible)</title>
+  <title>FreelanceFX Calculator</title>
   <style>
-    body { font-family: 'Poppins', sans-serif; background: #f9f9f9; margin: 0; padding: 40px 10px; }
+    body { font-family: 'Poppins', sans-serif; background: #f5f6fa; margin: 0; padding: 40px 10px; }
     .fx-calculator {
-      max-width: 650px;
+      max-width: 600px;
       margin: auto;
-      padding: 25px;
+      padding: 20px;
       background: #fff;
       border-radius: 12px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.06);
+      box-shadow: 0 4px 10px rgba(0,0,0,0.05);
     }
     h2 { text-align: center; color: #0a1a2f; }
-    select, input, button {
+    input, select, button {
       width: 100%; padding: 12px; margin: 10px 0;
       font-size: 1rem; border-radius: 6px; border: 1px solid #ccc;
     }
@@ -39,18 +39,25 @@
 </head>
 <body>
   <div class="fx-calculator">
-    <h2>FreelanceFX Calculator (Secure & Flexible)</h2>
-    <label for="base">Select base currency:</label>
-    <select id="base"></select>
-
+    <h2>FreelanceFX Calculator (Live Rates)</h2>
+    <label for="base">Select currency:</label>
+    <select id="base">
+      <option value="">--Select--</option>
+      <option value="USD">USD</option>
+      <option value="EUR">EUR</option>
+      <option value="GBP">GBP</option>
+      <option value="AUD">AUD</option>
+    </select>
     <label for="target">Select payout currency:</label>
-    <select id="target"></select>
-
+    <select id="target">
+      <option value="">--Select--</option>
+      <option value="NGN">NGN - Nigerian Naira</option>
+      <option value="INR">INR - Indian Rupee</option>
+      <option value="PHP">PHP - Philippine Peso</option>
+    </select>
     <label for="amount">Enter amount:</label>
-    <input type="number" id="amount" placeholder="e.g. 1000" min="1" />
-
+    <input type="number" id="amount" placeholder="e.g. 1000" />
     <button onclick="calculate()">Compare Payouts</button>
-
     <table>
       <thead>
         <tr>
@@ -63,55 +70,26 @@
       </thead>
       <tbody id="results"></tbody>
     </table>
-    <p style="margin-top:15px; font-size:0.9rem; text-align:center;">
-      💱 Secure live FX rates via CurrencyAPI Proxy
-    </p>
   </div>
 
   <script>
-    async function populateCurrencies() {
-      try {
-        const res = await fetch("https://api.currencyapi.com/v3/currencies?apikey=cur_live_JIrwC4Qmy8xZ7W8o1KrpyELOEpDCuSG5NDjrSbsb");
-        const data = await res.json();
-        const codes = Object.keys(data.data);
-
-        const base = document.getElementById('base');
-        const target = document.getElementById('target');
-
-        codes.forEach(code => {
-          const option = new Option(code, code);
-          base.appendChild(option.cloneNode(true));
-          target.appendChild(option.cloneNode(true));
-        });
-
-        base.value = "USD";
-        target.value = "INR";
-
-      } catch (err) {
-        console.error("Currency list fetch failed", err);
-      }
-    }
-
     async function calculate() {
       const amount = parseFloat(document.getElementById('amount').value);
       const base = document.getElementById('base').value;
       const target = document.getElementById('target').value;
-      const resultsContainer = document.getElementById('results');
 
-      resultsContainer.innerHTML = "";
-
-      if (!amount || amount <= 0 || !base || !target) {
-        alert("Please enter a valid amount and select currencies.");
+      if (!amount || !base || !target) {
+        alert("Please select both currencies and enter a valid amount.");
         return;
       }
 
       try {
-        const res = await fetch(`/.netlify/functions/fx-proxy?base=${base}&target=${target}`);
+        const res = await fetch(`/api/rates?base=${base}&target=${target}`);
         const data = await res.json();
-        const rate = data?.rate;
 
+        const rate = data?.rate;
         if (!rate) {
-          alert("Could not retrieve exchange rate. Please try again later.");
+          alert("Live exchange rate currently unavailable.");
           return;
         }
 
@@ -134,15 +112,12 @@
           </tr>`;
         }).join("");
 
-        resultsContainer.innerHTML = results;
+        document.getElementById('results').innerHTML = results;
 
       } catch (err) {
-        alert("Unexpected error occurred.");
-        console.error(err);
+        alert("Unexpected error occurred. Please try again later.");
       }
     }
-
-    populateCurrencies();
   </script>
 </body>
 </html>
